<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProfileFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/name_hint"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="@id/guideline_1"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/btn_delete_profile"
        app:layout_constraintStart_toStartOf="@id/guideline_1"
        app:layout_constraintTop_toBottomOf="@id/tv_email">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_phone"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_hint"
            android:textColor="@color/black"
            android:textSize="26sp"/>

        <ImageButton
            android:id="@+id/btn_edit_phone"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:background="@color/white"
            android:src="@drawable/edit"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_phone"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            app:errorEnabled="true"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btn_save_phone"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@drawable/baseline_done_24"
            android:background="@color/white"
            android:visibility="gone"/>
    </LinearLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/email_hint"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/layout"
        app:layout_constraintStart_toStartOf="@id/guideline_1"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="60dp" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_change_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout"/>

    <Button
        android:id="@+id/btn_delete_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete_profile"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_exit"
        app:layout_constraintStart_toEndOf="@+id/btn_change_password"
        app:layout_constraintTop_toBottomOf="@id/layout"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_delete_profile"
        app:layout_constraintTop_toBottomOf="@id/layout"/>
</androidx.constraintlayout.widget.ConstraintLayout>
